--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <!DOCTYPE html>
 <html dir="ltr" lang="ja" class="offline">
 <head>
-    <meta charset="utf-8">
+    <link rel="icon" href="https://scfcdv.github.io/homeweb2/favicon.ico">    <meta charset="utf-8">
     <meta name="description" content="あのgoogleのdinoゲームをプレイできます！">
     <meta name="color-scheme" content="light dark">
     <meta name="theme-color" content="#fff">
